Add healthz endpoint for GCE Health Checks

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,10 @@ http {
    internal;
    return 200 "<h1>301 Moved Permanently</h1>";
   }
+  
+  location = /healthz {   
+   return 200 "OK";
+  }
  
   location / {   
    return 301 https://$host$request_uri;
